Fixed more bugs

--- a/computers.html
+++ b/computers.html
@@ -47,7 +47,7 @@
 		
 		<main>
             <section id="computers">
-				<h3>Laptops</h3>
+				<h3>Desktops</h3>
 				<p>From the minimal setup to the latest gaming rig, we've got you covered.</p>      
             </section>
 			
