--- a/index.html
+++ b/index.html
@@ -1,6 +1,39 @@
 <!DOCTYPE html>
-<html>
-	<body>
-		<h1>Hi aksdhfalskdthere</h1>
-	</body>
+<html lang="en">
+<head>
+	<title>TechnoShop</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="styles.css">
+	 <meta name="viewport" content="width=device-width, initial-scale=1.0">	
+</head>
+<body>
+	<div id="container">
+
+		<!-- Use the header area for the website name or logo -->
+		<header id="ffc-logo">
+			<a href="index.html">
+		</header>
+
+		<!-- Use the nav area to add hyperlinks to other pages within the website -->
+        	<nav class="tablet-desktop">
+			<ul>
+            			<li><a href="index.html">Home</a></li>
+            			<li><a href="shop.html">Shop</a></li>
+            			<li><a href="about.html">About Us</a></li>
+            			<li><a href="contact.html">Contact Us</a></li>
+            			<li><a href="cart.html">Your Cart</a></li>
+        		</ul>
+    		</nav>
+
+		<main>
+			<h1>.......</h1>
+		</main>
+
+		<footer>
+			<p>......</p>
+		</footer>
+		
+	</div>
+</body>
 </html>
+			
