--- a/Contact Us.html
+++ b/Contact Us.html
@@ -20,7 +20,7 @@
                   <li><a href="shop.html">Shop</a></li>
                   <li><a href="about.html">About Us</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
-                  <li><a href="cart.html">Your Cart</a></li>
+                  <li><a href="cart.html">Cart</a></li>
               </ul>
           </nav>
 
