--- a/Tablet.html
+++ b/Tablet.html
@@ -1,54 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-		<title>TechnoShop</title>
-		<meta charset="utf-8">
-		<link rel="stylesheet" href="css/stylesheet.css">
-		<link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-		<link rel="shortcut icon" href="images/favicon.ico">
-		<link rel="icon" type="image/png" sizes="32x32" href="Images/favicon_io/favicon-32x32.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="Images/favicon_io/apple-touch-icon.png">
-		<link rel="icon" sizes="192x192" href="Images/favicon_io/android-chrome-192x192.png">
+    <meta charset="utf-8">
+    <title>TechnoShop</title>
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon_io/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="Images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" sizes="192x192" href="Images/favicon_io/android-chrome-192x192.png">
 </head>
 <body>
+    <div id="container">
+        <!-- Mobile Navigation -->
+        <nav class="mobile-nav">
+            <a class="menu-icon" onclick="hamburger()">
+                <div>&#9776; Menu</div>
+            </a>
+            <div id="menu-links" class="menu-hidden">
+                <a href="index.html">Home</a>
+                <a href="shop.html">Shop</a>
+                <a href="about.html">About Us</a>
+                <a href="contact.html">Contact Us</a>
+                <a href="cart.html">Your Cart</a>
+            </div>
+        </nav>
 
-		<div id="container">
+        <!-- Header for Website Name or Logo -->
+        <header id="ffc-logo">
+            <a href="index.html"><img src="Images/Logo technoshop.png" alt="Logo TechnoShop" height="30"></a>
+        </header>
 
-			<!-- Mobile Nav -->
-			 <nav class="mobile-nav">
-				<div id="menu-links">
-					<a href="index.html">Home</a>
-					<a href="shop.html">Shop</a> 
-					<a href="about.html">About Us</a>
-					<a href="contact.html">Contact Us</a>
-					<a href="cart.html">Your Cart</a>
-				</div>
-				<a class="menu-icon" onclick="hamburger()">
-					<div>&#9776;</div>
-				</a>
-			</nav>
-			<!-- Use the header area for the website name or logo -->
-			<header id="ffc-logo">
-				<a href="index.html"><img src="Images/Logo technoshop.png" alt="Logo TechnoShop" height="30" ></a>
-			</header>
+        <!-- Tablet and Desktop Navigation -->
+        <nav class="tablet-desktop">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="cart.html">Your Cart</a></li>
+            </ul>
+        </nav>
 
-			<!-- Tablet, Desktop Nav -->
-			<nav class="tablet-desktop">
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="shop.html">Shop</a></li>
-					<li><a href="about.html">About Us</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
-					<li><a href="cart.html">Your Cart</a></li>
-				</ul>
-			</nav>
-		  <main>
-        <h1>.......</h1>
-      </main>
+        <!-- Main Content Area -->
+        <main>
+            <h1>Welcome to TechnoShop!</h1>
+            <!-- Dynamic content goes here, replace dots as needed -->
+        </main>
 
-      <footer>
-        <p>&copy;.......</p>
-      </footer>
-  </div>
+        <!-- Footer -->
+        <footer>
+            <p>&copy; 2024 TechnoShop. All rights reserved.</p>
+        </footer>
+    </div>
+
+    <script>
+        function hamburger() {
+            var menu = document.getElementById('menu-links');
+            if (menu.classList.contains('menu-hidden')) {
+                menu.classList.remove('menu-hidden');
+            } else {
+                menu.classList.add('menu-hidden');
+            }
+        }
+    </script>
 </body>
 </html>
