--- a/Contact Us.html
+++ b/Contact Us.html
@@ -22,7 +22,7 @@
                 <a href="shop.html">Shop</a>
                 <a href="about.html">About Us</a>
                 <a href="contact.html">Contact Us</a>
-                <a href="cart.html">Your Cart</a>
+                <a href="cart.html">Cart</a>
             </div>
         </nav>
 
@@ -38,7 +38,7 @@
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="cart.html">Your Cart</a></li>
+                <li><a href="cart.html">Cart</a></li>
             </ul>
         </nav>
 
