--- a/Contact Us.html
+++ b/Contact Us.html
@@ -72,7 +72,8 @@
 
         <!-- Footer -->
         <footer>
-            <p>&copy; 2024 TechnoShop. All rights reserved.</p>
+            <p>&copy; Copyright 2021. All Right Reserved.</p>
+            <p><a href="mailto:technoshop@mail.net">technoshop@mail.net</a></p>
         </footer>
     </div>
 
