--- a/Tablet.html
+++ b/Tablet.html
@@ -45,12 +45,12 @@
         <!-- Main Content Area -->
         <main>
             <h1>Welcome to TechnoShop!</h1>
-            <!-- Dynamic content goes here, replace dots as needed -->
         </main>
 
         <!-- Footer -->
         <footer>
-            <p>&copy; 2024 TechnoShop. All rights reserved.</p>
+            <p>&copy; Copyright 2021. All Right Reserved.</p>
+            <p><a href="mailto:technoshop@mail.net">technoshop@mail.net</a></p>
         </footer>
     </div>
 
