--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 		</main>
 
 		<footer>
-			<p>......</p>
+			<p>&copy; Copyright 2021. All Right Reserved.</p>
+            		<p><a href="mailto:technoshop@mail.net">technoshop@mail.net</a></p>
 		</footer>
 		
 	</div>
