--- a/Contact Us.html
+++ b/Contact Us.html
@@ -76,7 +76,9 @@
             <p><a href="mailto:technoshop@mail.net">technoshop@mail.net</a></p>
         </footer>
     </div>
-
+    
+    <script src="Script/script.js"></script>
+    
     <script>
         function hamburger() {
             var menu = document.getElementById('menu-links');
