--- a/Tablet.html
+++ b/Tablet.html
@@ -54,6 +54,8 @@
         </footer>
     </div>
 
+    <script src="Script/script.js"></script>
+
     <script>
         function hamburger() {
             var menu = document.getElementById('menu-links');
