--- a/Tablet.html
+++ b/Tablet.html
@@ -45,17 +45,41 @@
         <!-- Main Content Area -->
         <main>
             <h1>Welcome to TechnoShop!</h1>
+            <p>Your one-stop shop for all the latest technology gadgets and gear. Explore our extensive range of high-quality tablets designed to fit every need and budget.</p>
+
+            <section id="features">
+                <h2>Featured Tablets</h2>
+                <div class="products">
+                    <div class="product">
+                        <img src="Images/tablet1.jpg" alt="Tablet 1">
+                        <h3>Pro Tablet Model 1</h3>
+                        <p>Powerful performance in your hands.</p>
+                        <a href="shop.html#tablet1">Learn More</a>
+                    </div>
+                    <div class="product">
+                        <img src="Images/tablet2.jpg" alt="Tablet 2">
+                        <h3>Pro Tablet Model 2</h3>
+                        <p>Next-generation technology for professionals.</p>
+                        <a href="shop.html#tablet2">Learn More</a>
+                    </div>
+                    <div class="product">
+                        <img src="Images/tablet3.jpg" alt="Tablet 3">
+                        <h3>Pro Tablet Model 3</h3>
+                        <p>Stunning visuals and superb performance.</p>
+                        <a href="shop.html#tablet3">Learn More</a>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <!-- Footer -->
         <footer>
-            <p>&copy; Copyright 2021. All Right Reserved.</p>
+            <p>&copy; Copyright 2021. All Rights Reserved.</p>
             <p><a href="mailto:technoshop@mail.net">technoshop@mail.net</a></p>
         </footer>
     </div>
 
     <script src="Script/script.js"></script>
-
     <script>
         function hamburger() {
             var menu = document.getElementById('menu-links');
