Added in software page and fixed some bugs

--- a/software.html
+++ b/software.html
@@ -41,29 +41,21 @@
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
-		
+			
 			<main>
-				<section id="computers">
+				<main>
+				<section id="software">
 					<h3>Desktops</h3>
-					<p>From the minimal setup to the latest gaming rig, we've got you covered.</p>      
+					<p>Our catalog of software is designed to address every student's needs.</p>      
 				</section>
 				
-				<section id="computer-cards">
+				<section id="software-cards">
 					<div>
-						<img src="Images/hpdesktop.jpg">
-						<p>$129.99</p>
-					</div>
-					<div>
-						<img src="Images/macdesktop.webp">
-						<p>$799.99</p>
-					</div>
-					<div>
-						<img src="Images/gamingdesktop.jpg">
-						<p>$1199.99</p>
+						<img src="Images/office.png">
+						<p>$149.99</p>
 					</div>
 				</section>
 			</main>
-			
 			<footer>
 				<p>&copy; Copyright 2021. All Right Reserved.</p>
 				<p><a href="mailto:technoshop@mail.net">technoshop@mail.net</a></p>
