--- a/About.html
+++ b/About.html
@@ -3,6 +3,7 @@
 <head>
     <title>TechnoShop</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/stylesheet.css">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.ico">
@@ -15,18 +16,20 @@
     <div id="container">
 
         <!-- Mobile Nav -->
-		 <nav class="mobile-nav">
+		<nav class="mobile-nav">
             <div id="menu-links">
                 <a href="index.html">Home</a>
-                <a href="about.html">About Us</a> 
-                <a href="classes.html">Classes</a>
-                <a href="nutrition.html">Nutrition</a> 
+                <a href="shop.html">shop</a>
+                <a href="about.html">About us</a>
                 <a href="contact.html">Contact Us</a>
+                <a href="cart.html">Your cart</a>
             </div>
             <a class="menu-icon" onclick="hamburger()">
                 <div>&#9776;</div>
             </a>
         </nav>
+
+        
         <!-- Use the header area for the website name or logo -->
         <header id="ffc-logo">
             <a href="index.html"><img src="Images/Logo technoshop.png" alt="Logo TechnoShop" height="30" ></a>
