--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>TechnoShop</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="css/stylesheet.css">
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">	
 </head>
 <body>
@@ -15,15 +15,15 @@
 		</header>
 
 		<!-- Use the nav area to add hyperlinks to other pages within the website -->
-        	<nav class="tablet-desktop">
-			<ul>
-            			<li><a href="index.html">Home</a></li>
-            			<li><a href="shop.html">Shop</a></li>
-            			<li><a href="about.html">About Us</a></li>
-            			<li><a href="contact.html">Contact Us</a></li>
-            			<li><a href="cart.html">Your Cart</a></li>
-        		</ul>
-    		</nav>
+		<nav class="tablet-desktop">
+		<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="shop.html">Shop</a></li>
+					<li><a href="about.html">About Us</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
+					<li><a href="cart.html">Your Cart</a></li>
+			</ul>
+		</nav>
 
 		<main>
 			<h1>.......</h1>
