--- a/Index.html
+++ b/Index.html
@@ -1,40 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<title>TechnoShop</title>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/stylesheet.css">
-	 <meta name="viewport" content="width=device-width, initial-scale=1.0">	
-</head>
-<body>
-	<div id="container">
+	<head>
+		<title>TechnoShop</title>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="css/stylesheet.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	</head>
+	<body>
+		<div id="container">
 
-		<!-- Use the header area for the website name or logo -->
-		<header id="ffc-logo">
-			<a href="index.html">
-		</header>
+			<!-- Mobile Nav -->
+			<nav class="mobile-nav">
+				<div id="menu-links">
+					<a href="index.html">Home</a>
+					<a href="shop.html">shop</a>
+					<a href="about.html">About us</a>
+					<a href="contact.html">Contact Us</a>
+					<a href="cart.html">Your cart</a>
+				</div>
+				<a class="menu-icon" onclick="hamburger()">
+					<div>&#9776;</div>
+				</a>
+			</nav>
 
-		<!-- Use the nav area to add hyperlinks to other pages within the website -->
-		<nav class="tablet-desktop">
-		<ul>
+			
+			<!-- Use the header area for the website name or logo -->
+			<header id="ffc-logo">
+				<a href="Index.html"><img src="Images/Logo technoshop.png" alt="Logo TechnoShop" height="30" ></a>
+			</header>
+
+			<!-- Tablet, Desktop Nav -->
+			<nav class="tablet-desktop">
+				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="shop.html">Shop</a></li>
-					<li><a href="about.html">About Us</a></li>
+					<li><a href="shop.html">shop</a></li>
+					<li><a href="about.html">About us</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
-					<li><a href="cart.html">Your Cart</a></li>
-			</ul>
-		</nav>
+					<li><a href="cart.html">Your cart</a></li>
+				</ul>
+			</nav>
 
-		<main>
-			<h1>.......</h1>
-		</main>
+			<main>
+				<h1>.......</h1>
+			</main>
 
-		<footer>
-			<p>&copy; Copyright 2021. All Right Reserved.</p>
-            		<p><a href="mailto:technoshop@mail.net">technoshop@mail.net</a></p>
-		</footer>
-		
-	</div>
-</body>
+			<footer>
+				<p>&copy; Copyright 2021. All Right Reserved.</p>
+						<p><a href="mailto:technoshop@mail.net">technoshop@mail.net</a></p>
+			</footer>
+		</div>
+	</body>
+	<script src="Script/script.js"></script>
 </html>
 			
