--- a/shop.html
+++ b/shop.html
@@ -21,7 +21,7 @@
                 <a href="index.html">Home</a>
                 <a href="shop.html">shop</a>
                 <a href="about.html">About us</a>
-                <a href="contact.html">Contact Us</a>
+                <a href="Contact Us.html">Contact Us</a>
                 <a href="cart.html">Your cart</a>
             </div>
             <a class="menu-icon" onclick="hamburger()">
@@ -41,7 +41,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">shop</a></li>
                 <li><a href="about.html">About us</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="Contact Us.html">Contact Us</a></li>
                 <li><a href="cart.html">Your cart</a></li>
             </ul>
         </nav>
