--- a/About.html
+++ b/About.html
@@ -15,36 +15,38 @@
 
     <div id="container">
 
-        <!-- Mobile Nav -->
-		<nav class="mobile-nav">
-            <div id="menu-links">
-                <a href="index.html">Home</a>
-                <a href="shop.html">shop</a>
-                <a href="about.html">About us</a>
-                <a href="contact.html">Contact Us</a>
-                <a href="cart.html">Your cart</a>
-            </div>
-            <a class="menu-icon" onclick="hamburger()">
-                <div>&#9776;</div>
-            </a>
-        </nav>
+		<div id="nav">
+			<!-- Mobile Nav -->
+			<nav class="mobile-nav">
+				<div id="menu-links">
+					<a href="index.html">Home</a>
+					<a href="shop.html">shop</a>
+					<a href="about.html">About us</a>
+					<a href="contact.html">Contact Us</a>
+					<a href="cart.html">Your cart</a>
+				</div>
+				<a class="menu-icon" onclick="hamburger()">
+					<div>&#9776;</div>
+				</a>
+			</nav>
 
-        
-        <!-- Use the header area for the website name or logo -->
-        <header id="ffc-logo">
-            <a href="index.html"><img src="Images/Logo technoshop.png" alt="Logo TechnoShop" height="30" ></a>
-        </header>
+			
+			<!-- Use the header area for the website name or logo -->
+			<header id="ffc-logo">
+				<a href="index.html"><img src="Images/Logo technoshop.png" alt="Logo TechnoShop" height="30" ></a>
+			</header>
 
-        <!-- Tablet, Desktop Nav -->
-        <nav class="tablet-desktop">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="shop.html">shop</a></li>
-                <li><a href="about.html">About us</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="cart.html">Your cart</a></li>
-            </ul>
-        </nav>
+			<!-- Tablet, Desktop Nav -->
+			<nav class="tablet-desktop">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="shop.html">shop</a></li>
+					<li><a href="about.html">About us</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
+					<li><a href="cart.html">Your cart</a></li>
+				</ul>
+			</nav>
+		</div>
 		
         <!-- Use the main area to add the main content of the webpage -->
         <main>
