--- a/Tablet.html
+++ b/Tablet.html
@@ -12,35 +12,38 @@
 </head>
 <body>
     <div id="container">
-        <!-- Mobile Navigation -->
-        <nav class="mobile-nav">
-            <a class="menu-icon" onclick="hamburger()">
-                <div>&#9776; Menu</div>
-            </a>
-            <div id="menu-links" class="menu-hidden">
-                <a href="index.html">Home</a>
-                <a href="shop.html">Shop</a>
-                <a href="about.html">About Us</a>
-                <a href="contact.html">Contact Us</a>
-                <a href="cart.html">Your Cart</a>
-            </div>
-        </nav>
+	
+		<div id="nav">
+			<!-- Mobile Navigation -->
+			<nav class="mobile-nav">
+				<a class="menu-icon" onclick="hamburger()">
+					<div>&#9776; Menu</div>
+				</a>
+				<div id="menu-links" class="menu-hidden">
+					<a href="index.html">Home</a>
+					<a href="shop.html">Shop</a>
+					<a href="about.html">About Us</a>
+					<a href="contact.html">Contact Us</a>
+					<a href="cart.html">Your Cart</a>
+				</div>
+			</nav>
 
-        <!-- Header for Website Name or Logo -->
-        <header id="ffc-logo">
-            <a href="index.html"><img src="Images/Logo technoshop.png" alt="Logo TechnoShop" height="30"></a>
-        </header>
+			<!-- Header for Website Name or Logo -->
+			<header id="ffc-logo">
+				<a href="index.html"><img src="Images/Logo technoshop.png" alt="Logo TechnoShop" height="30"></a>
+			</header>
 
-        <!-- Tablet and Desktop Navigation -->
-        <nav class="tablet-desktop">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="cart.html">Your Cart</a></li>
-            </ul>
-        </nav>
+			<!-- Tablet and Desktop Navigation -->
+			<nav class="tablet-desktop">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="shop.html">Shop</a></li>
+					<li><a href="about.html">About Us</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
+					<li><a href="cart.html">Your Cart</a></li>
+				</ul>
+			</nav>
+		</div>
 
         <!-- Main Content Area -->
         <main>
