--- a/computers.html
+++ b/computers.html
@@ -14,33 +14,35 @@
 
 		<div id="container">
 
-			<!-- Mobile Nav -->
-			 <nav class="mobile-nav">
-				<div id="menu-links">
-					<a href="index.html">Home</a>
-					<a href="shop.html">Shop</a> 
-					<a href="about.html">About Us</a>
-					<a href="contact.html">Contact Us</a>
-				</div>
-				<a class="menu-icon" onclick="hamburger()">
-					<div>&#9776;</div>
-				</a>
-			</nav>
-			<!-- Use the header area for the website name or logo -->
-			<header id="ffc-logo">
-				<a href="index.html"><img src="Images/Logo technoshop.png" alt="Logo TechnoShop" height="30" ></a>
+			<div id="nav">
+				<!-- Mobile Nav -->
+				 <nav class="mobile-nav">
+					<div id="menu-links">
+						<a href="index.html">Home</a>
+						<a href="shop.html">Shop</a> 
+						<a href="about.html">About Us</a>
+						<a href="contact.html">Contact Us</a>
+					</div>
+					<a class="menu-icon" onclick="hamburger()">
+						<div>&#9776;</div>
+					</a>
+				</nav>
+				<!-- Use the header area for the website name or logo -->
+				<header id="ffc-logo">
+					<a href="index.html"><img src="Images/Logo technoshop.png" alt="Logo TechnoShop" height="30" ></a>
 
-			</header>
+				</header>
 
-			<!-- Tablet, Desktop Nav -->
-			<nav class="tablet-desktop">
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="shop.html">Shop</a></li>
-					<li><a href="about.html">About Us</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
-				</ul>
-			</nav>
+				<!-- Tablet, Desktop Nav -->
+				<nav class="tablet-desktop">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="shop.html">Shop</a></li>
+						<li><a href="about.html">About Us</a></li>
+						<li><a href="contact.html">Contact Us</a></li>
+					</ul>
+				</nav>
+			</div>
 		
 			<main>
 				<section id="computers">
