--- a/Tablet.html
+++ b/Tablet.html
@@ -54,13 +54,13 @@
                 <h2>Featured Tablets</h2>
                 <div class="products">
                     <div class="product">
-                        <img src="Images/produit1.jpg" alt="Tablet 1">
+                        <img src="Images/produit1.jpeg" alt="Tablet 1">
                         <h3>Pro Tablet Model 1</h3>
                         <p>Powerful performance in your hands.</p>
                         <a href="shop.html#tablet1">Learn More</a>
                     </div>
                     <div class="product">
-                        <img src="Images/produit2.jpg" alt="Tablet 2">
+                        <img src="Images/produit2.jpeg" alt="Tablet 2">
                         <h3>Pro Tablet Model 2</h3>
                         <p>Next-generation technology for professionals.</p>
                         <a href="shop.html#tablet2">Learn More</a>
