Added in font family

--- a/software.html
+++ b/software.html
@@ -47,7 +47,7 @@
 			<main>
 				<main>
 				<section id="software">
-					<h3>Desktops</h3>
+					<h3>Software</h3>
 					<p>Our catalog of software is designed to address every student's needs.</p>      
 				</section>
 				
