--- a/Index.html
+++ b/Index.html
@@ -44,6 +44,8 @@
 
 			<main>
 				<h1>.......</h1>
+				<img src="Images/macdesktop.webp" alt="Imac" height="300px">
+				<img src="Images/produit1.jpeg" alt=""
 			</main>
 
 			<footer>
