--- a/Index.html
+++ b/Index.html
@@ -41,7 +41,8 @@
 			</div>
 
 			<main>
-				<h1>.......</h1>
+				<h1>Discover the latest in electronic gadgets and innovations. Explore our wide selection of products designed to enhance your digital life.</p>
+            <div class="call-to-action"></h1>
 			</main>
 
 			<footer>
