--- a/shop.html
+++ b/shop.html
@@ -20,7 +20,7 @@
 			<nav class="mobile-nav">
 				<div id="menu-links">
 					<a href="index.html">Home</a>
-					<a href="shop.html">shop</a>
+					<a href="shop.html">Shop</a>
 					<a href="about.html">About us</a>
 					<a href="Contact Us.html">Contact Us</a>
 				</div>
@@ -38,7 +38,7 @@
 			<nav class="tablet-desktop">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="shop.html">shop</a></li>
+					<li><a href="shop.html">Shop</a></li>
 					<li><a href="about.html">About us</a></li>
 					<li><a href="Contact Us.html">Contact Us</a></li>
 				</ul>
