Added content to homepage and fixed some css

--- a/Index.html
+++ b/Index.html
@@ -41,8 +41,15 @@
 			</div>
 
 			<main>
-				<h1>Discover the latest in electronic gadgets and innovations. Explore our wide selection of products designed to enhance your digital life.</p>
-            <div class="call-to-action"></h1>
+				<h2>Discover the latest in electronic gadgets and innovations. Explore a wide selection of products designed to enhance your digital life.</h2>
+				<br>
+				<h1>All at Technoshop.</h1>
+				<br>
+				<br>
+				<div class="home-images">
+					<img src="Images/produit1.jpeg">
+					<img src="Images/macbook.jpg">
+				</div>
 			</main>
 
 			<footer>
