Added in facebook and twitter icons

--- a/Index.html
+++ b/Index.html
@@ -48,13 +48,16 @@
 				<br>
 				<div class="home-images">
 					<img src="Images/produit1.jpeg">
+					<img src="Images/hpdesktop.jpg">
 					<img src="Images/macbook.jpg">
 				</div>
 			</main>
 
 			<footer>
 				<p>&copy; Copyright 2021. All Right Reserved.</p>
-						<p><a href="mailto:technoshop@mail.net">technoshop@mail.net</a></p>
+				<p><a href="mailto:technoshop@mail.net">technoshop@mail.net</a></p>
+				<img src="Images/twitter.png" width="20" height="20">
+				<img src="Images/facebook.webp" width="25" height="25">
 			</footer>
 		</div>
 	</body>
