--- a/Contact Us.html
+++ b/Contact Us.html
@@ -100,6 +100,8 @@
         <footer>
             <p>&copy; Copyright 2021. All Rights Reserved.</p>
             <p><a href="mailto:technoshop@mail.net">technoshop@mail.net</a></p>
+		<<img src="Images/twitter.png" width="20" height="20">
+		<img src="Images/facebook.webp" width="25" height="25">
         </footer>
     </div>
     <script src="Script/script.js"></script>
