--- a/Index.html
+++ b/Index.html
@@ -36,6 +36,7 @@
 						<li><a href="shop.html">shop</a></li>
 						<li><a href="about.html">About us</a></li>
 						<li><a href="Contact Us.html">Contact Us</a></li>
+						<li><a href="portfolio.html>">Portfolio</a></li>
 					</ul>
 				</nav>
 			</div>
