--- a/Contact Us.html
+++ b/Contact Us.html
@@ -24,7 +24,7 @@
 					<a href="index.html">Home</a>
 					<a href="shop.html">Shop</a>
 					<a href="about.html">About Us</a>
-					<a href="contact.html">Contact Us</a>
+					<a href="Contact Us.html">Contact Us</a>
 				</div>
 			</nav>
 
@@ -39,7 +39,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="shop.html">Shop</a></li>
 					<li><a href="about.html">About Us</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
+					<li><a href="Contact Us.html">Contact Us</a></li>
 				</ul>
 			</nav>
 		</div>
