--- a/Images/portfolioSolange.html
+++ b/Images/portfolioSolange.html
@@ -1,65 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Solange's Portfolio</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
-<body>
-<header>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span the="icon-bar"></span>
-                    <span the="icon-bar"></span>                        
-                </button>
-                <a class="navbar-brand" href="#">Solange's IA Portfolio</a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="About Me.html">About Me</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Blog</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> My Account</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</header>
-
-<main>
-    <h2>My Portfolio</h2>
-    <div id="page">
-        <article>
-            <figure>
-                <img src="images/solange.jpg" alt="Picture of Solange" height="280" width="280">
-                <figcaption>Information Architect & Student at SUU</figcaption>
-            </figure>
-            <h2>About Me</h2>
-            <p>My name is Solange, a junior at Southern Utah University (SUU) majoring in Computer Science with a focus on Information Architecture(IA). I am passionate about organizing complex information to improve usability and user experience. My studies and projects involve creating intuitive navigation systems, effective categorization, and ensuring content accessibility, which are critical in helping users find and interact with information efficiently.</p>
-            <p>Through my coursework and hands-on projects, I have developed strong skills in designing and implementing user-centric information structures that facilitate effective communication and interaction across digital platforms.</p>
-        </article>
-    </div>
-</main>
-<footer>
-    <a href="Solange's Portfolio.html"><p>Designed by Solange Adidi</p></a>
-    <p>&copy; 2024 Solange's IA Portfolio. All rights reserved.</p>
-    <img src="Images/twitter.png" width="20" height="20">
-	<img src="Images/facebook.webp" width="25" height="25">
-
-</footer>
-
-</body>
-</html>
+fklbg
