--- a/Contact Us.html
+++ b/Contact Us.html
@@ -37,10 +37,23 @@
 			<nav class="tablet-desktop">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="shop.html">Shop</a></li>
-					<li><a href="about.html">About Us</a></li>
+					<li><a href="computers.html">shop</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="computers.html">Computers</a></li>
+                            <li><a href="laptop.html">Laptops</a></li>
+                            <li><a href="Tablet.html">Tablet</a></li>
+                            <li><a href="software.html">Software</a></li>
+                        </ul>
+                    </li>
+					<li><a href="about.html">About us</a></li>
 					<li><a href="Contact Us.html">Contact Us</a></li>
-				</ul>
+                    <li><a href="portfolioHayden.html">Team</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="portfolioHayden">Hayden</a></li>
+                            <li><a href="portfolioSolange">Solange</a></li>
+                            <li><a href="portfolioOscar">Oscar</a></li>
+                        </ul>
+				    </li>
 			</nav>
 		</div>
 
