--- a/About.html
+++ b/About.html
@@ -49,7 +49,7 @@
                     </li>
 					<li><a href="about.html">About us</a></li>
 					<li><a href="Contact Us.html">Contact Us</a></li>
-                    <li><a href="portfolioHayden.html">Team</a></li>
+                    <li><a href="portfolioHayden.html">Team</a>
                         <ul class="dropdown-menu">
                             <li><a href="portfolioHayden">Hayden</a></li>
                             <li><a href="portfolioSolange">Solange</a></li>
