--- a/computers.html
+++ b/computers.html
@@ -19,7 +19,7 @@
 				 <nav class="mobile-nav">
 					<div id="menu-links">
 						<a href="index.html">Home</a>
-						<a href="shop.html">Shop</a> 
+						<a href="computers.html">Shop</a> 
 						<a href="about.html">About Us</a>
 						<a href="contact.html">Contact Us</a>
 					</div>
@@ -34,13 +34,27 @@
 				</header>
 
 				<!-- Tablet, Desktop Nav -->
+				<!-- Tablet, Desktop Nav -->
 				<nav class="tablet-desktop">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="shop.html">Shop</a></li>
-						<li><a href="about.html">About Us</a></li>
-						<li><a href="contact.html">Contact Us</a></li>
-					</ul>
+						<li><a href="computers.html">Shop</a>
+							<ul class="dropdown-menu">
+								<li><a href="computers.html">Computers</a></li>
+								<li><a href="laptop.html">Laptop</a></li>
+								<li><a href="Tablet.html">Tablet</a></li>
+								<li><a href="software.html">Software</a></li>
+							</ul>
+						</li>
+						<li><a href="about.html">About us</a></li>
+						<li><a href="Contact Us.html">Contact Us</a></li>
+						<li><a href="portfolioHayden.html">Team</a>
+							<ul class="dropdown-menu">
+								<li><a href="portfolioHayden">Hayden</a></li>
+								<li><a href="portfolioSolange">Solange</a></li>
+								<li><a href="portfolioOscar">Oscar</a></li>
+							</ul>
+						</li>
 				</nav>
 			</div>
 		
