--- a/Contact Us.html
+++ b/Contact Us.html
@@ -22,7 +22,7 @@
 				</a>
 				<div id="menu-links" class="menu-hidden">
 					<a href="index.html">Home</a>
-					<a href="shop.html">Shop</a>
+					<a href="computers.html">Shop</a>
 					<a href="about.html">About Us</a>
 					<a href="Contact Us.html">Contact Us</a>
 				</div>
