--- a/Tablet.html
+++ b/Tablet.html
@@ -21,7 +21,7 @@
 				</a>
 				<div id="menu-links" class="menu-hidden">
 					<a href="index.html">Home</a>
-					<a href="shop.html">Shop</a>
+					<a href="computers.html">Shop</a>
 					<a href="about.html">About Us</a>
 					<a href="contact.html">Contact Us</a>
 				</div>
