--- a/portfolioSolange.html
+++ b/portfolioSolange.html
@@ -55,7 +55,7 @@
 </main>
 <footer>
     <a href="Solange's Portfolio.html"><p>Designed by Solange Adidi</p></a>
-    <p>&copy; 2024 Solange's IA Portfolio. All rights reserved.</p>
+    <p>&copy; 2024 Solange's Portfolio. All rights reserved.</p>
     <img src="Images/twitter.png" width="20" height="20">
 	<img src="Images/facebook.webp" width="25" height="25">
 
