--- a/portfolioSolange.html
+++ b/portfolioSolange.html
@@ -21,7 +21,7 @@
                     <span the="icon-bar"></span>
                     <span the="icon-bar"></span>                        
                 </button>
-                <a class="navbar-brand" href="#">Solange's IA Portfolio</a>
+                <a class="navbar-brand" href="#">Solange's Portfolio</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
